<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Attendance Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_java">Hello java</string>
    <string name="Click_here">Click Here</string>
    <string name="add">Add</string>
    <string name="exit">Exit</string>
    <string name="bunkAll">Bunk All</string>
    <string name="report">View Report</string>
    <string name="Addsubject">Add Subject</string>
    <string name="deleteAll">Delete All</string>
    <string name="attendance">Attendance :</string>
    
     <string name="attendance1">Overall Attendance</string>
     <string name="totalclass">Total Class :</string>
     <string name="classattend">Class Attended :</string>
    <string name="attend">Attend</string>
    <string name="bunk">Bunk</string>
    <string name="haveattend">0%</string>
    <string name="percent">0/0</string>
    <string name="total">Total</string>
    <string name="edit_subject">Edit Subject</string>
    <string name="edit_attendance">Edit Attendance</string>
    <string name="delete">Delete</string>
    <string name="subject">Subject</string>
    <string name="attendAll">Attend All</string>
    <string name="title_activity_record">Record</string>
    <string name="hello_world">Hello world!</string>

</resources>
