<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="60sp"
    android:layout_marginTop="10sp"
    android:layout_weight="0.54"
    android:orientation="vertical"
    android:padding="5sp" >

    <TextView
        android:id="@+id/Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvsubject"
        android:layout_alignParentBottom="true"
        android:focusable="false"
        android:text="@string/attendance"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tvsubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Total"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/tvpercent"
        android:focusable="false"
        android:text="@string/subject"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btright"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_alignBaseline="@+id/btwrong"
        android:layout_alignBottom="@+id/btwrong"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/btwrong"
        android:background="@drawable/round_button_green"
        android:clickable="true"
        android:focusable="false"
        android:src="@drawable/right"
        android:text="@string/attend"
        android:textSize="10sp" />

    <Button
        android:id="@+id/btwrong"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_alignBottom="@+id/tvattendance"
        android:layout_alignParentRight="true"
        android:background="@drawable/round_button_red"
        android:clickable="true"
        android:focusable="false"
        android:src="@drawable/wrong"
        android:text="@string/bunk"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/tvattendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Total"
        android:layout_toRightOf="@+id/tvsubject"
        android:text="@string/percent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvpercent"
        android:layout_width="100sp"
        android:layout_height="20sp"
        android:layout_alignRight="@+id/btright"
        android:layout_alignTop="@+id/btright"
        android:layout_marginRight="17dp"
        android:focusable="false"
        android:text="@string/haveattend"
        android:textSize="18sp" />

</RelativeLayout>